# abe

./: .gitignore  .isort.cfg  .markdownlint.json  .rules.verible_lint  .verible-format  404.html  CONTRIBUTING.md  LICENSING.md  Makefile  NOTICE  README.md  REUSE.toml  checkmake.ini  index.html  mkdocs.yml  mypy.ini  pyproject.toml  sitemap.xml
LICENSES/: MIT.txt
design/: index.html
docs/: design.md  dv.md  fifo_depth.md  formal.md  index.md  pkt_quantize.md  python_dev.md  rad_async_fifo_dv_readme.md  rad_cdc_mcp_dv_readme.md  rad_cdc_sync_dv_readme.md  rad_new_design.md  rad_template_dv_readme.md
dv/: index.html
fifo_depth/: index.html
formal/: index.html
mk/: 00-vars.mk  10-helpers.mk  20-python.mk  30-rtl.mk  40-synth.mk  50-formal.mk  60-dv.mk  70-docs.mk  80-uarch-pq.mk  90-uarch-fd.mk
pkt_quantize/: index.html
python_dev/: index.html
rad_async_fifo_dv_readme/: index.html
rad_cdc_mcp_dv_readme/: index.html
rad_cdc_sync_dv_readme/: index.html
rad_new_design/: index.html
rad_template_dv_readme/: index.html
scripts/: generate_readme.py
search/: search_index.json
src/abe/: __init__.py  utils.py
src/abe/rad/: __init__.py
src/abe/rad/rad_async_fifo/: __init__.py
src/abe/rad/rad_async_fifo/dv/: README.md  __init__.py  dv_regress.yaml  rad_async_fifo_coverage.py  rad_async_fifo_driver.py  rad_async_fifo_env.py  rad_async_fifo_item.py  rad_async_fifo_monitor_in.py  rad_async_fifo_monitor_out.py  rad_async_fifo_ref_model.py  rad_async_fifo_reset_sink.py  rad_async_fifo_sb.py  rad_async_fifo_sequence.py  test_rad_async_fifo.py
src/abe/rad/rad_async_fifo/formal/: rad_async_fifo.sby  rad_async_fifo_cover.sby  rad_async_fifo_formal_top.sv
src/abe/rad/rad_async_fifo/rtl/: rad_async_fifo.sv  rad_async_fifo_mem.sv  rad_async_fifo_rptr.sv  rad_async_fifo_sync.sv  rad_async_fifo_wptr.sv  srclist.f
src/abe/rad/rad_cdc_mcp/: __init__.py
src/abe/rad/rad_cdc_mcp/dv/: README.md  __init__.py  dv_regress.yaml  rad_cdc_mcp_coverage.py  rad_cdc_mcp_driver.py  rad_cdc_mcp_env.py  rad_cdc_mcp_item.py  rad_cdc_mcp_monitor_in.py  rad_cdc_mcp_monitor_out.py  rad_cdc_mcp_ref_model.py  rad_cdc_mcp_reset_sink.py  rad_cdc_mcp_sb.py  rad_cdc_mcp_sequence.py  test_rad_cdc_mcp.py
src/abe/rad/rad_cdc_mcp/formal/: rad_cdc_mcp.sby  rad_cdc_mcp_cover.sby  rad_cdc_mcp_formal_top.sv
src/abe/rad/rad_cdc_mcp/rtl/: rad_cdc_mcp.sv  rad_cdc_mcp_amcp_send.sv  rad_cdc_mcp_asend_fsm.sv  rad_cdc_mcp_back_fsm.sv  rad_cdc_mcp_bmcp_recv.sv  srclist.f
src/abe/rad/rad_cdc_sync/: __init__.py
src/abe/rad/rad_cdc_sync/dv/: README.md  __init__.py  dv_regress.yaml  rad_cdc_sync_coverage.py  rad_cdc_sync_driver.py  rad_cdc_sync_item.py  rad_cdc_sync_monitor_in.py  rad_cdc_sync_monitor_out.py  rad_cdc_sync_ref_model.py  rad_cdc_sync_sequence.py  test_rad_cdc_sync.py
src/abe/rad/rad_cdc_sync/formal/: rad_cdc_sync.sby  rad_cdc_sync_cover.sby  rad_cdc_sync_formal_top.sv
src/abe/rad/rad_cdc_sync/rtl/: rad_cdc_meta_cfg_pkg.sv  rad_cdc_sync.sv  srclist.f
src/abe/rad/rad_template/dv/: README.md  __init__.py  template_coverage.py  template_driver.py  template_item.py  template_monitor_in.py  template_monitor_out.py  template_ref_model.py  template_sequence.py  test_template.py
src/abe/rad/shared/: __init__.py
src/abe/rad/shared/dv/: __init__.py  base_agent.py  base_clock_driver.py  base_clock_mixin.py  base_coverage.py  base_driver.py  base_env.py  base_item.py  base_monitor.py  base_monitor_in.py  base_monitor_out.py  base_ref_model.py  base_reset_driver.py  base_reset_item.py  base_reset_monitor.py  (+9 more)
src/abe/rad/tools/: __init__.py  dv.py  dv_make_bench.py  dv_regress.py  dv_regress_all.py  dv_report.py  flatten_srclist.sh
src/abe/uarch/: __init__.py  fifo_depth.py  fifo_depth_base.py  fifo_depth_cbfc.py  fifo_depth_cdc.py  fifo_depth_ready_valid.py  fifo_depth_replay.py  fifo_depth_utils.py  fifo_depth_xon_xoff.py  pkt_quantize.py
src/abe/uarch/fifo_depth_examples/: cbfc_balanced.yaml  cbfc_cdc.yaml  cbfc_flat.yaml  cbfc_layered.yaml  replay.yaml  replay_cdc.yaml  rv_balanced.yaml  rv_cdc.yaml  rv_flat.yaml  rv_layered.yaml  xon_xoff_balanced.yaml  xon_xoff_cdc.yaml  xon_xoff_flat.yaml  xon_xoff_layered.yaml
typings/cocotb/: __init__.pyi  handle.pyi  task.pyi  triggers.pyi  types.pyi
typings/matplotlib/: pyplot.pyi
typings/pyuvm/: __init__.pyi  error_classes.pyi
(+3 files in other folders)
