# SPDX-FileCopyrightText: 2026 Hugh Walsh
#
# SPDX-License-Identifier: MIT

# This file: pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "abe"
dynamic = ["version"]
description = "ABE: A Better Environment for Open-Source ASIC IP Development"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Hugh Walsh" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

# Runtime deps
dependencies = [
    "PyYAML>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/abe-asic-ip/abe"

[project.optional-dependencies]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pylint>=4.0.4",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "types-setuptools>=80.10.0.20260124",
    "types-PyYAML>=6.0.12.20250915",
    "matplotlib>=3.10.8",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pymdown-extensions>=10.20.1",
]
rad = [
    "pyuvm>=4.0.1",
    "cocotb>=2.0.1,<3.0",
    "cocotb-coverage>=2.0,<3.0",
]
uarch = [
    "tabulate>=0.9.0",
    "types-tabulate>=0.9.0.20241207",
    "pydantic>=2.12.5",
    "ortools>=9.15.6755",
    "Pint>=0.25.2",
]

[project.scripts]
dv = "abe.rad.tools.dv:main"
dv-make-bench = "abe.rad.tools.dv_make_bench:main"
dv-regress = "abe.rad.tools.dv_regress:main"
dv-regress-all = "abe.rad.tools.dv_regress_all:main"
dv-report = "abe.rad.tools.dv_report:main"
pkt-quantize = "abe.uarch.pkt_quantize:main"
fifo-depth = "abe.uarch.fifo_depth:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["abe*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
abe = ["py.typed"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0.0.0"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.pylint.BASIC]
typevar-rgx = "^[A-Z][A-Z0-9_]*$"

[tool.pyright]
stubPath = "typings"
